--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,76 @@
+
+/* eslint-disable no-console */
+import { Fee } from '#src/models/entities/Fees.js';
+import Result from '#features/shared/result.js';
+import CustomerFees from '#src/models/CustomerFees.js';
+import BankAccountFee from '#src/models/BankAccountFee.js';
+import InvestimentAccountFee from '#src/models/InvestimentAccountFee.js';
+import { FeeCase } from '#src/models/entities/FeeCase.js';
+import { Field } from '#src/models/entities/Fields.js';
+import numberToCurrency from '#core/helpers/currency.js';
+import {
+  connectToFeeMgmtDb,
+  executeStoreProcedure,
+} from '#core/data/mssql/index.js';
+
+
+async function getPackageData(cifno) {
+  const conn = await connectToFeeMgmtDb();
+  const [row] = await executeStoreProcedure(conn, 'sp_get_fees_byCIF', { cifno });
+  if (!row) return {};
+
+  return {
+    defaultFeePackageId: row['Default Fee Package Id'] ?? null,
+    branchCity: row['Branch City']?.trim() || '',
+    branchState: row['Branch State']?.trim() || '',
+    branchType: row['Branch Type']?.trim() || '',
+    defaultPackageType: row['Default Package Type']?.trim() || '',
+    feePackage: row['Default Fee Package']?.trim() || '',
+  };
+}
+
+async function getStandardFees(packageId) {
+  const conn = await connectToFeeMgmtDb();
+  const rows = await executeStoreProcedure(
+    conn, 'sp_get_standard_fees_bypackage',
+    { FeePackageId: packageId },
+  );
+  console.log('STD-rows', rows?.length);
+  return rows ?? [];
+}
+
+async function getExceptionFees(packageId) {
+  const conn = await connectToFeeMgmtDb();
+  const rows = await executeStoreProcedure(
+    conn, 'sp_get_exception_fees_bypackage',
+    { FeePackageId: packageId },
+  );
+  console.log('EXC-rows', rows?.length);
+  return rows ?? [];
+}
+
+function getDocumentUrl(id) {
+  const urls = global.environment.scheduleUrls || {};
+  const key = ({ 1: 'intlPB3', 2: 'uSPBIndividual3', 3: 'uSPBCorporation3' })[id];
+  return key ? urls[key] || '' : '';
+}
+
+
+async function getFeeStandard(filter) {
+  return Fee.find({ $or: filter })
+    .select({ feeType: 1, feeGroups: { name: 1, fields: 1, code: 1 } })
+    .lean();
+}
+
+function findGroup(fee, name) {
+  return fee?.feeGroups?.find(g => g.name === name);
+}
+
+const feeCodeMap = {
+  JH001: 1, JH002: 2, JH010: 3, JH008: 4,
+  BPS002: 6, BPS003: 5, BPS004: 7, BPS005: 7,
+};
+
 function applyStandardAmounts(mongoFees, stdRows) {
   mongoFees.forEach(fee => {
     const stdGrp = findGroup(fee, 'Standard Fees');
@@ -30,8 +103,34 @@ function applyStandardAmounts(mongoFees, stdRows) {
   });
 }
 
+function mergeEquityOptionAll(excRows) {
+  const equities = excRows.filter(r => r.FeeCode === "BPS004");
+  const options  = excRows.filter(r => r.FeeCode === "BPS005");
+  const allCodes = Array.from(
+    new Set([...equities, ...options].map(r => r.Amount))
+  );
+  return allCodes.sort().map(code => {
+    const equity = equities.find(r => r.Amount === code);
+    const option = options .find(r => r.Amount === code);
+    return {
+      value: code,
+      text:
+        `${code} - ` +
+        `Equity:${equity && equity.FreqDescription ? equity.FreqDescription.trim() : '-'}` +
+        `; Option:${option && option.FreqDescription ? option.FreqDescription.trim() : '-'}`,
+      visible: true,
+      retired: false,
+    };
+  });
+}
 
-
+function applyEquityOptionException(field, excRows) {
+  if (field.code === 7) {
+    field.exceptionOptions = mergeEquityOptionAll(excRows); 
+    field.defaultValue = '';
+    field.labelValue = '';
+  }
+}
 
 function applyExceptionAmounts(mongoFees, excRows) {
   const byCode = excRows.reduce((acc, r) => {
@@ -91,9 +190,6 @@ function applyExceptionAmounts(mongoFees, excRows) {
   });
 }
 
-
-
-
 function setEquityOptionLabelValue(field, excRows) {
   // --- NOVO: Para custody (code 6) ---
   if (field && field.code === 6 && field.defaultValue) {
@@ -121,8 +217,6 @@ function setEquityOptionLabelValue(field, excRows) {
   }
 }
 
-
-
 function patchClientCurrent(customerAccount, feesArr) {
   const invFee = feesArr.find(f => f.feeType === 'Investment Account Fees');
   if (!invFee) return;
@@ -148,5 +242,91 @@ function patchClientCurrent(customerAccount, feesArr) {
   if (fldStd7 && fldCurr7 && !fldCurr7.labelValue) {
     fldCurr7.defaultValue = fldStd7.defaultValue;
     fldCurr7.labelValue   = fldStd7.labelValue;
+  }
+}
+
+function syncExceptionLabels(feesArr) {
+  feesArr.forEach(fee => {
+    const exc = findGroup(fee, 'Exception Request');
+    if (!exc) return;
+    exc.fields.forEach(f => {
+      const val = f.defaultValue;
+      f.labelValue = val ? numberToCurrency(Number(val)) : '';
+    });
+  });
+}
+
+export default class FeeGetByCifUseCase {
+  async execute({ customerAccount }) {
+    const fees = await getFeeStandard([
+      { feeType: 'Customer Fees' },
+      { feeType: 'Bank Account Fees' },
+      { feeType: 'Investment Account Fees' },
+    ]);
+
+    const pkgData = await getPackageData(customerAccount[0].cifno);
+    const packageId = pkgData.defaultFeePackageId;
+
+    const stdRows = await getStandardFees(packageId);
+    const excRows = await getExceptionFees(packageId);
+
+    applyStandardAmounts(fees, stdRows);
+    applyExceptionAmounts(fees, excRows);
+    
+    fees.forEach(fee => {
+      const excGrp = fee.feeGroups?.find(g => g.name === 'Exception Request');
+      if (excGrp) {
+        excGrp.fields.forEach(field => applyEquityOptionException(field, excRows)); 
+      }
+      ['Standard Fees', 'Client Current Fees'].forEach(groupName => {
+        const group = fee.feeGroups?.find(g => g.name === groupName);
+        if (group) {
+          group.fields.forEach(field => setEquityOptionLabelValue(field, excRows));
+        }
+      });
+    });
+
+    customerAccount.forEach(acc => Object.assign(acc, pkgData));
+
+    const result = { fees: [] };
+    const [customer, bank, investment] = [
+      new CustomerFees(fees, customerAccount),
+      new BankAccountFee(fees, customerAccount),
+      new InvestimentAccountFee(
+        fees, customerAccount, await Field.findOne({ code: 7 }),
+      ),
+    ];
+    [customer, bank, investment]
+      .filter(f => f.fee && f.fee.feeGroups?.length)
+      .forEach(f => result.fees.push(f.fee));
+
+    const actives = await FeeCase.find({
+      cif: customerAccount[0].cifno,
+      status: { $nin: ['DONE', 'REJECTED'] },
+      caseNumber: { $exists: true },
+    });
+    result.feesActives = actives.map(({ caseNumber, id }) => ({ caseNumber, id }));
+
+    const docUrl = getDocumentUrl(packageId);
+    result.accounts = customerAccount.map(acc => ({
+      cifno: acc.cifno,
+      ddaNumber: acc.ddaNumber,
+      branchCity: acc.branchCity,
+      branchState: acc.branchState,
+      branchType: acc.branchType,
+      defaultPackageType: acc.defaultPackageType,
+      feePackage: acc.feePackage,
+      defaultFeePackageId: acc.defaultFeePackageId,
+      defaultFeePackage: acc.defaultFeePackage,
+      documentUrl: docUrl,
+      feeAmount: acc.feeAmount,
+      exceptionAmount: acc.exceptionAmount ?? null,
+    }));
+    result.documentUrl = docUrl;
+
+    patchClientCurrent(customerAccount, result.fees);
+    syncExceptionLabels(result.fees);
+
+    return Result.ok(result);
   }
 }
