--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-/* eslint-disable no-console */
 import { Fee } from '#src/models/entities/Fees.js';
 import Result from '#features/shared/result.js';
 import CustomerFees from '#src/models/CustomerFees.js';
@@ -13,12 +11,13 @@ import {
   executeStoreProcedure,
 } from '#core/data/mssql/index.js';
 
-
+/**
+ * Consulta pacote de tarifas padrão para o cliente (CIF).
+ */
 async function getPackageData(cifno) {
   const conn = await connectToFeeMgmtDb();
   const [row] = await executeStoreProcedure(conn, 'sp_get_fees_byCIF', { cifno });
   if (!row) return {};
-
   return {
     defaultFeePackageId: row['Default Fee Package Id'] ?? null,
     branchCity: row['Branch City']?.trim() || '',
@@ -29,67 +28,81 @@ async function getPackageData(cifno) {
   };
 }
 
+/**
+ * Consulta tarifas padrão do pacote informado.
+ */
 async function getStandardFees(packageId) {
   const conn = await connectToFeeMgmtDb();
   const rows = await executeStoreProcedure(
     conn, 'sp_get_standard_fees_bypackage',
     { FeePackageId: packageId },
   );
-  console.log('STD-rows', rows?.length);
   return rows ?? [];
 }
 
+/**
+ * Consulta exceções de tarifas do pacote informado.
+ */
 async function getExceptionFees(packageId) {
   const conn = await connectToFeeMgmtDb();
   const rows = await executeStoreProcedure(
     conn, 'sp_get_exception_fees_bypackage',
     { FeePackageId: packageId },
   );
-  console.log('EXC-rows', rows?.length);
   return rows ?? [];
 }
 
+/**
+ * Monta a URL do documento conforme o pacote padrão.
+ */
 function getDocumentUrl(id) {
   const urls = global.environment.scheduleUrls || {};
   const key = ({ 1: 'intlPB3', 2: 'uSPBIndividual3', 3: 'uSPBCorporation3' })[id];
   return key ? urls[key] || '' : '';
 }
 
-
+/**
+ * Consulta estrutura dos grupos/tarifas no MongoDB.
+ */
 async function getFeeStandard(filter) {
   return Fee.find({ $or: filter })
     .select({ feeType: 1, feeGroups: { name: 1, fields: 1, code: 1 } })
     .lean();
 }
 
+/**
+ * Utilitário para buscar grupo pelo nome.
+ */
 function findGroup(fee, name) {
   return fee?.feeGroups?.find(g => g.name === name);
 }
 
+/**
+ * Mapeamento FeeCode → code (utilizado nos grupos/fields).
+ */
 const feeCodeMap = {
   JH001: 1, JH002: 2, JH010: 3, JH008: 4,
   BPS002: 6, BPS003: 5, BPS004: 7, BPS005: 7,
 };
 
+/**
+ * Aplica valores e labelValue nos campos do grupo Standard Fees.
+ * Custody (code 6) recebe label customizado (Amount + FreqDescription).
+ */
 function applyStandardAmounts(mongoFees, stdRows) {
   mongoFees.forEach(fee => {
     const stdGrp = findGroup(fee, 'Standard Fees');
     if (!stdGrp) return;
-
     stdGrp.fields.forEach(field => {
       const row = stdRows.find(r => Number(r.FeeType) === field.code);
       if (!row) return;
-
-      // --- NOVO: caso Custody/Safekeeping (code 6) ---
       if (field.code === 6 && row.Amount && row.FrequencyDescription) {
         field.defaultValue = row.Amount;
         field.labelValue = `${row.Amount} - ${row.FrequencyDescription?.trim() || ''}`;
         field.tooltip = row.FrequencyDescription?.trim() || '';
         return;
       }
-
       const num = Number(row.FeeAmount);
-
       if (!Number.isNaN(num)) {
         field.defaultValue = num.toString();
         field.labelValue = numberToCurrency(num);
@@ -97,12 +110,14 @@ function applyStandardAmounts(mongoFees, stdRows) {
         field.defaultValue = row.FeeAmount;
         field.labelValue = row.FrequencyDescription?.trim() || row.FeeAmount;
       }
-
       field.tooltip = row.FrequencyDescription?.trim() || '';
     });
   });
 }
 
+/**
+ * Gera todas as opções possíveis para Equity/Options (campo 7).
+ */
 function mergeEquityOptionAll(excRows) {
   const equities = excRows.filter(r => r.FeeCode === "BPS004");
   const options  = excRows.filter(r => r.FeeCode === "BPS005");
@@ -124,6 +139,9 @@ function mergeEquityOptionAll(excRows) {
   });
 }
 
+/**
+ * Aplica opções de exceção para Equity/Options (campo 7).
+ */
 function applyEquityOptionException(field, excRows) {
   if (field.code === 7) {
     field.exceptionOptions = mergeEquityOptionAll(excRows); 
@@ -132,12 +150,15 @@ function applyEquityOptionException(field, excRows) {
   }
 }
 
+/**
+ * Aplica opções de exceção nos grupos Exception Request.
+ * Custody (code 6) recebe label customizado (Amount + FreqDescription).
+ */
 function applyExceptionAmounts(mongoFees, excRows) {
   const byCode = excRows.reduce((acc, r) => {
     (acc[r.FeeCode] ??= []).push(r);
     return acc;
   }, {});
-
   mongoFees.forEach(fee => {
     const excGrp = fee.feeGroups?.find(g => g.name === 'Exception Request');
     if (excGrp) {
@@ -156,8 +177,6 @@ function applyExceptionAmounts(mongoFees, excRows) {
         .map(([k]) => k);
       const rows = codes.flatMap(c => byCode[c] || []);
       if (!rows.length) return;
-
-      // --- NOVO: Custody/Safekeeping code 6 ---
       if (field.code === 6) {
         field.exceptionOptions = rows.map(r => ({
           value: r.Amount,
@@ -171,7 +190,6 @@ function applyExceptionAmounts(mongoFees, excRows) {
         field.labelValue = '';
         return;
       }
-
       const nums = rows.filter(r => !Number.isNaN(Number(r.Amount)))
         .sort((a, b) => Number(a.Amount) - Number(b.Amount));
       const alpha = rows.filter(r => Number.isNaN(Number(r.Amount)))
@@ -190,8 +208,10 @@ function applyExceptionAmounts(mongoFees, excRows) {
   });
 }
 
+/**
+ * Ajusta labelValue do campo Custody (6) ou Equity/Options (7) nos grupos Standard/Current.
+ */
 function setEquityOptionLabelValue(field, excRows) {
-  // --- NOVO: Para custody (code 6) ---
   if (field && field.code === 6 && field.defaultValue) {
     const code = field.defaultValue;
     const custody = excRows.filter(r => r.FeeCode === "BPS002");
@@ -202,8 +222,6 @@ function setEquityOptionLabelValue(field, excRows) {
       return;
     }
   }
-
-  // Já existe para Equity/Options (code 7)
   if (field && field.code === 7 && field.defaultValue) {
     const code = field.defaultValue;
     const equities = excRows.filter(r => r.FeeCode === "BPS004");
@@ -217,26 +235,22 @@ function setEquityOptionLabelValue(field, excRows) {
   }
 }
 
+/**
+ * Preenche valores do grupo Client Current Fees (Investment Account Fees) após padrão/exception.
+ */
 function patchClientCurrent(customerAccount, feesArr) {
   const invFee = feesArr.find(f => f.feeType === 'Investment Account Fees');
   if (!invFee) return;
-
   const currGrp = invFee.feeGroups?.find(g => g.name === 'Client Current Fees');
   const stdGrp  = invFee.feeGroups?.find(g => g.name === 'Standard Fees');
   if (!currGrp || !stdGrp) return;
-
-  // Custody/Safekeeping (code 6)
   const custodyAcc = customerAccount.find(a => a.feeType === 6);
   if (custodyAcc) {
     const fldCurr6 = currGrp.fields.find(f => f.code === 6);
     if (fldCurr6) {
       fldCurr6.defaultValue = custodyAcc.feeCode;
-      // Novo: não use numberToCurrency, use o label customizado!
-      // (vai ser ajustado depois no setEquityOptionLabelValue)
     }
   }
-
-  // Equity / Option (code 7)
   const fldStd7  = stdGrp.fields .find(f => f.code === 7);
   const fldCurr7 = currGrp.fields.find(f => f.code === 7);
   if (fldStd7 && fldCurr7 && !fldCurr7.labelValue) {
@@ -245,6 +259,9 @@ function patchClientCurrent(customerAccount, feesArr) {
   }
 }
 
+/**
+ * Atualiza labelValue das exceções (exibe valor numérico se houver).
+ */
 function syncExceptionLabels(feesArr) {
   feesArr.forEach(fee => {
     const exc = findGroup(fee, 'Exception Request');
@@ -256,6 +273,9 @@ function syncExceptionLabels(feesArr) {
   });
 }
 
+/**
+ * Caso de uso principal: retorna estrutura de taxas de acordo com o CIF informado.
+ */
 export default class FeeGetByCifUseCase {
   async execute({ customerAccount }) {
     const fees = await getFeeStandard([
@@ -263,16 +283,12 @@ export default class FeeGetByCifUseCase {
       { feeType: 'Bank Account Fees' },
       { feeType: 'Investment Account Fees' },
     ]);
-
     const pkgData = await getPackageData(customerAccount[0].cifno);
     const packageId = pkgData.defaultFeePackageId;
-
     const stdRows = await getStandardFees(packageId);
     const excRows = await getExceptionFees(packageId);
-
     applyStandardAmounts(fees, stdRows);
     applyExceptionAmounts(fees, excRows);
-    
     fees.forEach(fee => {
       const excGrp = fee.feeGroups?.find(g => g.name === 'Exception Request');
       if (excGrp) {
@@ -285,9 +301,7 @@ export default class FeeGetByCifUseCase {
         }
       });
     });
-
     customerAccount.forEach(acc => Object.assign(acc, pkgData));
-
     const result = { fees: [] };
     const [customer, bank, investment] = [
       new CustomerFees(fees, customerAccount),
@@ -299,14 +313,12 @@ export default class FeeGetByCifUseCase {
     [customer, bank, investment]
       .filter(f => f.fee && f.fee.feeGroups?.length)
       .forEach(f => result.fees.push(f.fee));
-
     const actives = await FeeCase.find({
       cif: customerAccount[0].cifno,
       status: { $nin: ['DONE', 'REJECTED'] },
       caseNumber: { $exists: true },
     });
     result.feesActives = actives.map(({ caseNumber, id }) => ({ caseNumber, id }));
-
     const docUrl = getDocumentUrl(packageId);
     result.accounts = customerAccount.map(acc => ({
       cifno: acc.cifno,
@@ -323,10 +335,8 @@ export default class FeeGetByCifUseCase {
       exceptionAmount: acc.exceptionAmount ?? null,
     }));
     result.documentUrl = docUrl;
-
     patchClientCurrent(customerAccount, result.fees);
     syncExceptionLabels(result.fees);
-
     return Result.ok(result);
   }
 }
